# zarea-de-risco

./: .env.example  .flake8  .gitignore  README.md  dev-requirements.txt  docker-compose.yml  job_download_data.py  job_upload_to_minio.py  pyproject.toml  requirements.txt  run_jobs.sh  setup_minio.sh
backend/: app.py  docker-compose.yml  nginx.conf  wsgi.py
backend/handle_minio/: resources.py  services.py
backend/handle_minio/minio_generic_client/: minio_client.py  minio_client_interface.py
data_processing/: main.py
data_processing/download/: base_downloader.py  compression.py  downloader.py  job_download.py  tar_utils.py
data_processing/jobs/: download_job.py  telegram_downloader.py  telegram_simple_downloader.py
data_processing/transform/: job_transform.ipynb
data_processing/upload/: upload_to_drive.py  upload_to_minio.py
docker/backend/: Dockerfile
docker/frontend/: Dockerfile
exceptions/: __init__.py
frontend/: .env.example  docker-compose.yml  index.html  package-lock.json  package.json
frontend/Zarea_De_Risco_FrontEnd/: README.md  package-lock.json  package.json
frontend/Zarea_De_Risco_FrontEnd/src/: App.jsx  index.css
frontend/Zarea_De_Risco_FrontEnd/src/components/Footer/: index.jsx
frontend/Zarea_De_Risco_FrontEnd/src/components/MainSection/: index.jsx
frontend/Zarea_De_Risco_FrontEnd/src/components/Navbar/: index.jsx
frontend/Zarea_De_Risco_FrontEnd/src/components/Neighborhood/: index.jsx
frontend/Zarea_De_Risco_FrontEnd/src/components/RecentNews/: index.jsx
frontend/Zarea_De_Risco_FrontEnd/src/components/ToolBar/: index.jsx
frontend/src/: App.jsx  app.js  index.css  main.jsx
frontend/src/components/AboutNews/: index.jsx
frontend/src/components/Featured/: index.jsx
frontend/src/components/Footer/: index.jsx
frontend/src/components/Links/: index.jsx
frontend/src/components/Logo/: index.jsx
frontend/src/components/Navbar/: index.jsx
frontend/src/components/Neighborhood/: index.jsx
frontend/src/components/RecentNews/: index.jsx
frontend/src/components/SearchBar/: index.jsx
frontend/src/pages/AboutNews/: index.jsx
frontend/src/pages/Home/: index.jsx
frontend/src/resources/: effects.js
frontend/src/routes/: dataRoutes.js
frontend/src/routes/Private/: index.tsx
frontend/src/services/: apiService.js
notebooks/: bairros_nlp.ipynb  nlp_implementation.ipynb
