[tool.poetry]
name = "zarea-de-risco"
version = "0.1.0"
description = "a initial poetry project for Zarea de Risco"
authors = ["welli7ngton <github.com/welli7ngton>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
taskipy = "^1.14.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.taskipy.tasks]
# flask app
zarea_build = { cmd = "cd backend && docker compose up -d --build", help = "build the flask app" }
zarea_up = { cmd = "docker start zarea", help = "start flask app"}
zarea_down = { cmd = "docker stop zarea", help = "stop flask app"}
zarea_rm = { cmd = "docker container rm zarea", help = "remove flask app"}

# minio
minio = { cmd = "docker run -d -p 9000:9000 -p 9090:9090 --name minio -v /mnt/wsl/minio/data:/data -v /mnt/wsl/minio/config:/root/.minio minio/minio server /data --console-address ':9090'", help = "run minio"}
start_min = { cmd = "docker start minio", help = "start minio container" }
stop_min = { cmd = "docker stop minio", help = "stop minio container" }
rm_min = { cmd = "docker container rm minio", help = "remove minio container" }

# jobs
job_up = { cmd = "python ./job_upload_to_minio.py", help = "execute the upload file"}
job_down = { cmd = "python ./job_download_data.py.py", help = "execute the download file"}

# docker general
ps = {cmd = "docker ps -a", help = "show all the containers running or not"}
